--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -1,39 +1,30 @@
-name: PHP Composer
+name: Laravel deployment on AWS elastic beanstalk
 
 on:
   push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
+    branches:
+      - master 
 
-permissions:
-  contents: read
+
 
 jobs:
-  build:
-
+  deploy:
     runs-on: ubuntu-latest
-
     steps:
+      
+      
     - uses: actions/checkout@v3
 
-    - name: Validate composer.json and composer.lock
-      run: composer validate --strict
+    - name: Generate deployment package
+      run: zip -r deploy.zip ./
 
-    - name: Cache Composer packages
-      id: composer-cache
-      uses: actions/cache@v3
+    - name: Deploy to EB
+      uses: einaregilsson/beanstalk-deploy@v21
       with:
-        path: vendor
-        key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-php-
-
-    - name: Install dependencies
-      run: composer install --prefer-dist --no-progress
-
-    # Add a test script to composer.json, for instance: "test": "vendor/bin/phpunit"
-    # Docs: https://getcomposer.org/doc/articles/scripts.md
-
-    # - name: Run test suite
-    #   run: composer run-script test
+        aws_access_key: ${{ secrets.AWS_ACCESS_KEY }}
+        aws_secret_key: ${{ secrets.AWS_SECRET_KEY }}
+        application_name: giftree-app
+        environment_name: Giftree-app-env-1
+        version_label: ${{github.sha}}
+        region: us-east-1
+        deployment_package: deploy.zip
