--- a/.env
+++ b/.env
@@ -8,11 +8,11 @@ LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=database-1.czxbcpnovfwt.us-east-1.rds.amazonaws.com
 DB_PORT=3306
-DB_DATABASE=hsblco55_oneclick
-DB_USERNAME=hsblco55_hsblco55
-DB_PASSWORD=Ss&Qmh&RzhaG
+DB_DATABASE=shopdb
+DB_USERNAME=admin
+DB_PASSWORD=password
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
