--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@ LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=database-1.czxbcpnovfwt.us-east-1.rds.amazonaws.com
+DB_HOST=db-OT2AW75XOOQ4VC22XE7WJJH3HE
 DB_PORT=3306
 DB_DATABASE=shopdb
 DB_USERNAME=admin
