--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -13,7 +13,7 @@ jobs:
       
     - uses: actions/checkout@v3
 
-    - name: Generate deployment packages
+    - name: Generate deployment package
       run: zip -r deploy.zip ./
 
     - name: Deploy to EB
