--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -21,8 +21,8 @@ jobs:
       with:
         aws_access_key: ${{ secrets.AWS_ACCESS_KEY }}
         aws_secret_key: ${{ secrets.AWS_SECRET_KEY }}
-        application_name: giftree-app
-        environment_name: Giftree-app-env-3
+        application_name: test
+        environment_name: Test-env
         version_label: ${{github.sha}}
         existing_bucket_name: elasticbeanstalk-us-east-1-381462137045
         region: us-east-1
