--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@ LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=shopdb.czxbcpnovfwt.us-east-1.rds.amazonaws.com
 DB_PORT=3306
 DB_DATABASE=shopdb
 DB_USERNAME=root
